kube/traefik-routes/argocd.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
spec:
  listeners:
    - name: http
      protocol: HTTP
      port: 8000
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd2-http-route
  namespace: argocd
spec:
  parentRefs:
    - name: argocd-gateway
      namespace: argicd
      sectionName: http
  hostnames:
    - "argocd2.kube.metalnet.org"
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
          kind: Service
          group: ""
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-http-route
  namespace: argocd
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: web
  hostnames:
    - "argocd.kube.metalnet.org"
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
          kind: Service
          group: ""
      matches:
        - path:
            type: PathPrefix
            value: /
