kube/traefik-routes/grafana.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: grafana-gateway
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-acme-issuer
spec:
  gatewayClassName: traefik
  listeners:
    - name: websecure
      protocol: HTTPS
      hostname: "grafana.kube.metalnet.org"
      port: 8443
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        mode: Terminate
        certificateRefs:
          - name: grafana-kube-metalnet-org-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-http-route
  namespace: monitoring
spec:
  parentRefs:
    - name: grafana-gateway
      namespace: monitoring
      sectionName: websecure
  hostnames:
    - "grafana.kube.metalnet.org"
  rules:
    - backendRefs:
        - name: vmks-grafana
          port: 80
          kind: Service
          group: ""
      matches:
        - path:
            type: PathPrefix
            value: /
