kube/traefik-routes/headlamp.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: headlamp-gateway
  namespace: traefik
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-acme-issuer
spec:
  gatewayClassName: traefik
  listeners:
    - name: websecure
      protocol: HTTPS
      hostname: "headlamp.kube.metalnet.org"
      port: 8443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: headlamp-kube-metalnet-org-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp-http-route
  namespace: traefik
spec:
  parentRefs:
    - name: headlamp-gateway
      namespace: traefik
      sectionName: websecure
  hostnames:
    - "headlamp.kube.metalnet.org"
  rules:
    - backendRefs:
        - name: headlamp
          port: 80
          kind: Service
          group: ""
      matches:
        - path:
            type: PathPrefix
            value: /
