kube/traefik-routes/traefik.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-gateway
  namespace: traefik
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-acme-issuer
spec:
  gatewayClassName: traefik
  listeners:
    - name: websecure
      protocol: HTTPS
      hostname: "traefik.kube.metalnet.org"
      port: 8443
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        mode: Terminate
        certificateRefs:
          - name: traefik-kube-metalnet-org-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-http-route
  namespace: traefik
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure
  hostnames:
    - "traefik.kube.metalnet.org"
  rules:
    - backendRefs:
        - name: api@internal
          port: 8080
          kind: TraefikService
          group: traefik.io
      matches:
        - path:
            type: PathPrefix
            value: /api/
        - path:
            type: PathPrefix
            value: /dashboard/
